# stellot

./: .env  .eslintrc.js  .gitignore  .prettierrc  CNAME  Cargo.toml  README.md  asset-manifest.json  blindSignatures.js  bootstrap.js  docker-compose.dev.yml  docker-compose.no-keybase.yml  docker-compose.yml  docker-stack.dev.yml  index.html  index.js  issueVoteToken.js  layouts__index.8290eaa6.async.js  layouts__index.9f0304d8.async.js  layouts__index.da8824e7.chunk.css  layouts__index.js  listenTransactions.js  operations.js  p__404.483b0d09.async.js  p__404.bcf8ef9a.async.js  p__create__index.706b7900.async.js  p__create__index.99a40c25.async.js  p__create__index.9c17b078.async.js  p__create__index.ba6ee4f5.chunk.css  p__create__index.chunk.css  p__create__index.js  p__faq__index.779b2e2a.async.js  p__faq__index.chunk.css  p__faq__index.js  p__index.927a96c0.chunk.css  p__index.chunk.css  p__index.f64f8ec7.async.js  p__index.js  p__voting__id__index.3f8fc096.async.js  p__voting__id__index.61375d37.async.js  (+68 more)
.github/: ci.yml
app/: .dockerignore  .env.example  .eslintrc.js  .prettierignore  .umirc.ts  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json  typings.d.ts
contracts/election/: Cargo.toml
contracts/election/src/: error.rs  lib.rs  merkle.rs  test.rs  types.rs
contracts/election/test_snapshots/test/: test_cast_outside_window.1.json  test_duplicate_cast_rejected.1.json  test_duplicate_issue_rejected.1.json  test_full_flow.1.json  test_tally_before_threshold.1.json  test_tally_wrong_length.1.json  test_unregistered_caster.1.json
(+340 files in other folders)
